Under development page has been modified. Added under development icon in menu + changed transition type.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://TonyFinder.github.io/Pedicure_Goods_Final_Version",
+  "homepage": "https://pedicure-cabinet.ru",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
