--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/node-sass": "^4.11.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-window": "^1.8.5",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
