--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-parallax-tilt": "^1.7.46",
     "react-redux": "^8.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
