--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-helmet": "^6.1.5",
     "@types/react-window": "^1.8.5",
+    "@types/styled-components": "^5.1.25",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
