--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
+    "react-youtube": "^9.0.3",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
